--- a/luainputenc.dtx
+++ b/luainputenc.dtx
@@ -235,11 +235,98 @@ and the derived files
 
 \luaUseModule{luainputenc}
 
-\DeclareOption{utf8}{}
 
-\DeclareOption{utf8x}{}
 
-\DeclareOption*{\lIE@activate}
+\def\DeclareInputMath#1{%
+   \@inpenc@test
+   \bgroup
+      \uccode`\~#1%
+      \uppercase{%
+   \egroup
+      \def~%
+   }%
+}
+\def\DeclareInputText#1#2{%
+   \def\reserved@a##1 ${}%
+   \def\reserved@b{#2}%
+   \ifcat_\expandafter\reserved@a\meaning\reserved@b$ $_%
+      \DeclareInputMath{#1}{#2}%
+   \else
+      \DeclareInputMath{#1}{\IeC{#2}}%
+   \fi
+}
+\def\IeC{%
+  \ifx\protect\@typeset@protect
+    \expandafter\@firstofone
+  \else
+    \noexpand\IeC
+  \fi
+}
+\def\inputencoding#1{%
+  \the\inpenc@prehook
+  \gdef\@inpenc@test{\global\let\@inpenc@test\relax}%
+  \edef\@inpenc@undefined{\noexpand\@inpenc@undefined@{#1}}%
+  \edef\inputencodingname{#1}%
+  \@inpenc@loop\^^A\^^H%
+  \@inpenc@loop\^^K\^^K%
+  \@inpenc@loop\^^N\^^_%
+  \advance\endlinechar\@M
+  \xdef\saved@space@catcode{\the\catcode`\ }%
+  \catcode`\ 9\relax
+  \input{#1.def}%
+  \advance\endlinechar-\@M
+  \catcode`\ \saved@space@catcode\relax
+  \ifx\@inpenc@test\relax\else
+    \PackageWarning{inputenc}%
+             {No characters defined\MessageBreak
+              by input encoding change to `#1'\MessageBreak}%
+  \fi
+  \the\inpenc@posthook
+}
+\newtoks\inpenc@prehook
+\newtoks\inpenc@posthook
+\def\@inpenc@undefined@#1{\PackageError{inputenc}%
+        {Keyboard character used is undefined\MessageBreak
+         in inputencoding `#1'}%
+       {You need to provide a  definition with
+        \noexpand\DeclareInputText\MessageBreak or
+        \noexpand\DeclareInputMath before using this key.}}%
+\def\@inpenc@loop#1#2{%
+  \@tempcnta`#1\relax
+  \loop
+    \catcode\@tempcnta\active
+    \bgroup
+      \uccode`\~\@tempcnta
+      \uppercase{%
+    \egroup
+         \let~\inpenc@undefined
+      }%
+  \ifnum\@tempcnta<`#2\relax
+     \advance\@tempcnta\@ne
+  \repeat}
+  
+\RequirePackage{ifluatex}
+
+\ifluatex
+
+\RequirePackage{luainputenc}
+
+\DeclareOption{utf8}{
+  \inputencoding{lutf8}}
+\DeclareOption{utf8x}{
+  \inputencoding{lutf8}}
+\DeclareOption*{
+  \lIE@activate 
+  \@inpenc@loop\^^?\^^ff
+  \inputencoding{\CurrentOption}}
+
+\else
+
+\DeclareOption*{
+\inputencoding{\CurrentOption}
+}
+
+\fi
 
 %    \end{macrocode}
 %
@@ -611,46 +698,60 @@ end
 
 %    \end{macrocode}
 %
-% The function that will be registered (if needed) in the \texttt{open\_read\_file} callback. It just reads the file normally, but starts or stops the translation at the beginning, and again at the end of the file.
+% We register the functions to stop or start the fake UTF-8 translation in the appropriate callbacks if necessary.
 %
 %    \begin{macrocode}
 
-function luainputenc.open_file(filename)
-    local path = kpse.find_file(filename)
-    if not path then
-        return
-    end
-    local f = io.open(path)
-    if not f then
-        return
-    end
+function luainputenc.pre_read_file(env)
     local currentstate = luainputenc.state
-    luainputenc.setstate(luainputenc.find_state(filename))
-    local env = {
-      ['reader'] = luainputenc.reader,
-      ['filename'] = filename,
-      ['file'] = f,
-      ['previousstate'] = currentstate,
-      ['close'] = luainputenc.close
-    }
-    return env
-end
-
-function luainputenc.reader(env)
-    return (env.file):read()
+    luainputenc.setstate(luainputenc.find_state(env.filename))
+    env.previousstate = currentstate
 end
 
 function luainputenc.close(env)
     luainputenc.setstate(env.previousstate)
-    do (env.file):close() end
 end
 
 luainputenc.callback_registered = 0
 
 function luainputenc.register_callback()
     if luainputenc.callback_registered == 0 then
-        callback.add('open_read_file', luainputenc.open_file, 'luainputenc.open_file')
+        callback.add('pre_read_file', luainputenc.pre_read_file, 'luainputenc.pre_read_file')
+        callback.add('file_close', luainputenc.close, 'luainputenc.close')
         luainputenc.callback_registered = 1
+    end
+end
+
+%    \end{macrocode}
+%
+% Finally we provide some functions to activate or disactivate the catcodes of the non-ASCII characters.
+%
+%    \begin{macrocode}
+
+luainputenc.activated_characters = {}
+luainputenc.unicode_mode = 0
+
+function luainputenc.declare_character(c)
+    luainputenc.activated_characters[tonumber(c)] = true
+end
+
+function luainputenc.activate_characters()
+    if luainputenc.unicode_mode == 1 then
+        for n, _ in pairs(luainputenc.activated_characters) do
+            tex.sprint(string.format('\\catcode %d\\active',n))
+            --texio.write_nl(string.format('\\catcode %d\\active',n))
+        end
+        luainputenc.unicode_mode = 0
+    end
+end
+
+function luainputenc.desactivate_characters()
+    if luainputenc.unicode_mode == 0 then
+        for n, _ in pairs(luainputenc.activated_characters) do
+            tex.sprint(string.format('\\catcode %d=11',n))
+            --texio.write_nl(string.format('\\catcode %d=11',n))
+        end
+        luainputenc.unicode_mode = 1
     end
 end
 
