--- a/luainputenc.dtx
+++ b/luainputenc.dtx
@@ -67,6 +67,7 @@ and the derived files
   \file{luainputenc.drv}{\from{luainputenc.dtx}{driver}}%
   \usedir{tex/lualatex/luainputenc}%
   \file{luainputenc.sty}{\from{luainputenc.dtx}{package}}%
+  \file{lutf8.def}{\from{luainputenc.dtx}{def}}%
 }
 
 % The following hacks are to generate a lua file with lua comments starting by -- instead of %%
@@ -494,6 +495,134 @@ and the derived files
 %
 % \iffalse
 %</package>
+% \fi
+%
+% \iffalse
+%<*def>
+% \fi
+%
+% \subsection{\texttt{lutf8.def}}
+%    \begin{macrocode}
+%% This file was adapted from utf8.def, which copyright is:
+%% Copyright 1993 1994 1995 1996 1997 1998 1999 2000 2001 2002 2003 2004 2005 2006
+%% The LaTeX3 Project.
+%%
+%% utf8.def is under the lppl version 1.3c or later, and can be found in the
+%% base LaTeX system.
+%%
+%% The lppl can be found at http://www.latex-project.org/lppl.txt
+%%
+%% The changes to utf8.def are Copyright 2009 Elie Roux, and are under the
+%% CC0 license.
+%%
+%% The changes are LuaTeX support.
+%%
+%% This file is distributed under the CC0 license, with clause 6 of the lppl as
+%% additional restrictions.
+
+\ProvidesFile{lutf8.def}
+   [2009/03/20 v0.9 UTF-8 support for luainputenc]
+   
+\makeatletter
+\catcode`\ \saved@space@catcode
+
+\@inpenc@test
+
+\ifx\@begindocumenthook\@undefined
+  \makeatother
+  \endinput \fi
+  
+\gdef\DeclareUnicodeCharacter#1#2{%
+ \@tempcnta"#1%
+ \luadirect{luainputenc.declare_character('\the\@tempcnta')}%
+ \catcode\@tempcnta\active %
+ \DeclareInputText{\the\@tempcnta}{#2}%
+}
+
+\@onlypreamble\DeclareUnicodeCharacter
+
+\def\cdp@elt#1#2#3#4{%
+  \wlog{Now handling font encoding #1 ...}%
+  \lowercase{%
+      \InputIfFileExists{#1enc.dfu}}%
+         {\wlog{... processing UTF-8 mapping file for font encoding
+                #1}%
+          \catcode`\ 9\relax}%
+        {\wlog{... no UTF-8 mapping file for font encoding #1}}%
+}
+\cdp@list
+
+\def\lIE@ActivateUnicodeCatcodes{%
+\luadirect{luainputenc.activate_characters()}%
+}
+
+\def\lIE@DesactivateUnicodeCatcodes{%
+\luadirect{luainputenc.desactivate_characters()}%
+}
+
+\edef\lIE@EU{EU2}
+
+\def\DeclareFontEncoding@#1#2#3{%
+  \edef\lIE@test{#1}%
+  %\edef\lIE@EU{EU2}%
+  \ifx\lIE@test\lIE@EU %
+    \lIE@DesactivateUnicodeCatcodes %
+    \def\@@enc@update{%
+      \edef\lIE@test{#1}%
+      %\edef\lIE@EU{EU2}%
+      %\luadirect{texio.write_nl([[\f@encoding]])}
+      \ifx\lIE@test\lIE@EU %
+        \lIE@DesactivateUnicodeCatcodes %
+       \else %
+        \lIE@ActivateUnicodeCatcodes %
+      \fi
+      \expandafter\let\csname\cf@encoding-cmd\endcsname\@changed@cmd
+      \expandafter\let\csname\f@encoding-cmd\endcsname\@current@cmd
+      \default@T
+      \csname T@\f@encoding\endcsname
+      \csname D@\f@encoding\endcsname
+      \let\enc@update\relax
+      \let\cf@encoding\f@encoding
+    }
+  \else %
+    \expandafter %
+    \ifx\csname T@#1\endcsname\relax %
+      \def\cdp@elt{\noexpand\cdp@elt}%
+      \xdef\cdp@list{\cdp@list\cdp@elt{#1}%
+                      {\default@family}{\default@series}%
+                      {\default@shape}}%
+      \expandafter\let\csname#1-cmd\endcsname\@changed@cmd %
+      \begingroup %
+        \wlog{Now handling font encoding #1 ...}%
+        \lowercase{%
+          \InputIfFileExists{#1enc.dfu}}%
+             {\wlog{... processing UTF-8 mapping file for font encoding #1}}%
+             {\wlog{... no UTF-8 mapping file for font encoding #1}}%
+      \endgroup
+    \else
+       \@font@info{Redeclaring font encoding #1}%
+    \fi
+  \fi %
+  \global\@namedef{T@#1}{#2}%
+  \global\@namedef{M@#1}{\default@M#3}%
+  \xdef\LastDeclaredEncoding{#1}%
+}
+  
+\DeclareUnicodeCharacter{00A9}{\textcopyright}
+\DeclareUnicodeCharacter{00AA}{\textordfeminine}
+\DeclareUnicodeCharacter{00AE}{\textregistered}
+\DeclareUnicodeCharacter{00BA}{\textordmasculine}
+\DeclareUnicodeCharacter{02C6}{\textasciicircum}
+\DeclareUnicodeCharacter{02DC}{\textasciitilde}
+\DeclareUnicodeCharacter{200C}{\textcompwordmark}
+\DeclareUnicodeCharacter{2026}{\textellipsis}
+\DeclareUnicodeCharacter{2122}{\texttrademark}
+\DeclareUnicodeCharacter{2423}{\textvisiblespace}
+
+%    \end{macrocode}
+%
+% \iffalse
+%</def>
 % \fi
 %
 % \subsection{\texttt{luainputenc.lua}}
